# athletic-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE_SYSTEM_PROMPT.md  DOCS.md  Dockerfile  README.md  claude_desktop_config_snippet.json  pyproject.toml  render.yaml
scripts/: run_analytics.py  run_api.py  run_logger.py  start.bat  start.sh  stop.bat  stop.sh  test_mcp_integration.py
src/athlete_mcp/: config.py
src/athlete_mcp/api/: auth.py  dependencies.py  main.py  utils.py
src/athlete_mcp/api/routers/: analytics.py  exercises.py  sets.py  workouts.py
src/athlete_mcp/api/schemas/: __init__.py  analytics.py  exercise.py  set.py  workout.py
src/athlete_mcp/database/: __init__.py  connection.py  migrations.py  models.py
src/athlete_mcp/servers/: analytics_server.py  logger_server.py
src/athlete_mcp/tools/: analytics_tools.py  logger_tools.py  shared.py
